Introduzindo script vinculado ao esqueleto básico

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>
         Loccus μPlate
     </title>
+    <script src="main.js"></script>
 </head>
 <body>
     <h2>Loccus μPlate</h2>
+    <div>
+    </div>
 </body>
 </html>
