Mostra número indicando quando a página foi carregada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <h2>Loccus μPlate</h2>
+    
     <div>
+        Atualizado em <span id="date-time"></span>
     </div>
 </body>
 </html>
