Alteração para recarga sem cache do Javascript na página

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>
         Loccus μPlate
     </title>
-    <script src="main.js"></script>
+    <script src="main.js?"></script>
 </head>
 <body>
     <h2>Loccus μPlate</h2>
     
     <div>
-        Atualizado em <span id="date-time"></span>
+        Atualizado em <span id="date-time"></span> --
     </div>
 </body>
 </html>
