Adição de estado de estado de duas formas - O estado nesse momento será representado pela data de um conjunto de   arquivos que nesse caso é incluido o arquivo 'main.css' que não   existe e faz parte dos testes para ilustrar o tratamento de uma   condição de erro. - As duas formas é que inicialmente foi feita a requisição de cada   arquivo e uma latência perceptível foi notada e foi feito de maneira   paralela, para observar a possibilidade de agilizar o processo.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
     <h2>Loccus μPlate</h2>
     
     <div>
-        Atualizado em <span id="date-time"></span> --
+        Atualizado em <span id="date-time"></span>
+    </div>
+
+    <hr/>
+    <h4>Sequential</h4>
+    <pre id="state-sequential"></pre>
+    <div>
+        State request in <span id="interval-sequential"></span>
+    </div>
+    <hr/>
+    <h4>Paralell</h4>
+    <pre id="state-paralell"></pre>
+    <div>
+        State request in <span id="interval-paralell"></span>
     </div>
 </body>
 </html>
