Remoção do processo comparativo

--- a/index.html
+++ b/index.html
@@ -14,18 +14,10 @@
     <div>
         Atualizado em <span id="date-time"></span>
     </div>
-
     <hr/>
-    <h4>Sequential</h4>
-    <pre id="state-sequential"></pre>
+    <pre id="state"></pre>
     <div>
-        State request in <span id="interval-sequential"></span>
-    </div>
-    <hr/>
-    <h4>Paralell</h4>
-    <pre id="state-paralell"></pre>
-    <div>
-        State request in <span id="interval-paralell"></span>
+        State request in <span id="interval"></span>
     </div>
 </body>
 </html>
