Introdução do botão 'Atualizar' para 'updateView' - Anteriormente 'updateView' era chamado somente na inicialização e com   esse botão pode ser chamado ao ser acionado. - É um botão temporário pois isso será chamado automaticamente e com   funcionalidade ao detectar alterações no estado.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <h2>Loccus μPlate</h2>
     
+    <button id="update">
+        Atualizar
+    </button>
     <div>
         Atualizado em <span id="date-time"></span>
     </div>
